# can-viewer

./: ARCHITECTURE.md  CONTRIBUTORS.md  Cargo.toml  LICENSING.md  README.md  build.rs  package-lock.json  package.json  release.sh  tauri.conf.json
.cargo/: config.toml
.github/workflows/: ci.yml
can-viewer/: Cargo.toml  build.rs
can-viewer/examples/: sample.dbc  sample.mf4
can-viewer/src/: about.rs  config.rs  lib.rs  main.rs  state.rs
can-viewer/src/app/: analysis.rs  analyze.rs  dbc.rs  helpers.rs  live.rs  mdf4.rs  mod.rs
can-viewer/src/services/: dbc.rs  (+2 more)
can-viewer/ui/: app.slint
canre/: Cargo.toml
canre/src/: main.rs
canre/tests/: mdf4_roundtrip.rs
frontend/lib/: can-viewer.ts  config.test.ts  config.ts  dbc-mapping.ts  filter.ts  renderers.test.ts  state.test.ts  state.ts  types.ts
frontend/styles/: can-viewer.css
scripts/: install-vcan.sh  vcan@.service
sigma-diagnostics/: Cargo.toml  README.md
sigma-diagnostics/src/: capture.rs  dbc.rs  dbc_export.rs  decode.rs  dto.rs  filter.rs  lib.rs  mdf.rs  state.rs  vss_frame_map.rs
sigma-diagnostics/tests/: anomaly_session.rs
sigma-racer-cluster/: Cargo.toml  README.md  build.rs
sigma-racer-cluster/src/: main.rs
sigma-racer-cluster/ui/: cluster.slint
sigma-racer-mechanic/: Cargo.toml  README.md  build.rs
sigma-racer-mechanic/src/: config.rs  lib.rs  main.rs  state.rs
sigma-racer-mechanic/ui/: app.slint
src/: dto.rs  lib.rs  main.rs
src/app/: catalog.rs  dbc.rs  helpers.rs
src/commands/: capture.rs  dbc.rs  filter.rs  mdf.rs  mod.rs
ui/: app.slint
ui/widgets/: brand.slint
(+107 files in other folders)
