# SPDX-License-Identifier: GPL-3.0-only
#
# This crate is the ONE exception to the workspace's MIT OR Apache-2.0
# licensing: it links Slint under Slint's GPL-3.0-only option so the
# cluster can ship on embedded hardware without a commercial license.
# Keep all reusable logic in the permissive crates (sigma-diagnostics);
# only the Slint-dependent UI shell lives here. See README.md.

[package]
name = "sigma-racer-cluster"
version.workspace = true
edition.workspace = true
license = "GPL-3.0-only"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
description = "Sigma Racer on-vehicle instrument cluster — thin Slint UI shell (GPL-3.0-only) over the MIT/Apache sigma-diagnostics domain crate"
keywords = ["can", "cluster", "instrument", "sigma-racer"]
categories = ["visualization", "embedded"]

[build-dependencies]
slint-build = "=1.17.1"

[dependencies]
sigma-diagnostics = { path = "../sigma-diagnostics" }
slint = { version = "=1.17.1", default-features = false, features = [
    "renderer-femtovg",
    "backend-winit",
    "compat-1-2",
] }
log = { workspace = true }
env_logger = "0.11.11"

[[bin]]
name = "sigma-racer-cluster"
path = "src/main.rs"
